# pathfinder

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  RunCMake.bat
CMake/: CopyDirConfig.cmake
EncounterGenerator/: CMakeLists.txt  EncounterGenerator.natvis
EncounterGenerator/include/: Encounter.h  EncounterGenerator.h  FileHelper.h  FilledEncounter.h  GeneratorUtilities.h  Monster.h  MonsterList.h  Party.h
EncounterGenerator/src/: Encounter.cpp  EncounterGenerator.cpp  FileHelper.cpp  FilledEncounter.cpp  GeneratorUtilities.cpp  Monster.cpp  MonsterList.cpp  Party.cpp
Gui/: CMakeLists.txt  version.rc.in
Gui/src/: main.cpp
Resources/: Monster_List_Json.json  Pathfinder Monster List - Monster_List.csv  RandomEncounters3Adventurers1Monsters.csv  RandomEncounters3Adventurers2Monsters.csv  RandomEncounters4Adventurers1Monsters.csv  RandomEncounters4Adventurers2Monsters.csv  RandomEncounters5Adventurers1Monsters.csv  RandomEncounters5Adventurers2Monsters.csv  RandomEncounters6Adventurers1Monsters.csv  RandomEncounters6Adventurers2Monsters.csv  Resharper.DotSettings
Resources/git_hooks/: commit-msg
